Refactor Product model and add SellerProduct relation
